# tba-solver

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/ex01_leeyang/: ex01_leeyang.cpp  ex01_leeyang_view.py
examples/ex02_adet/: ex02_adet.cpp  ex02_adet_view.py
src/: tba.hpp  tba_adet.hpp  tba_single.hpp  utils.hpp
